add converter and exception handling
