# src/main/java/com/example/springboot/exception/MyResponseEntityExceptionHandler.java
@@ -1,0 +1,27 @@
+package com.example.springboot.exception;
+
+import org.openapitools.model.GenericError;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+
+import lombok.val;
+import lombok.extern.slf4j.Slf4j;
+
+@Slf4j
+@RestControllerAdvice
+public class MyResponseEntityExceptionHandler extends ResponseEntityExceptionHandler {
+
+    @ExceptionHandler(MyBadRequestException.class)
+    protected ResponseEntity<Object> handleConflict(RuntimeException ex, WebRequest request) {
+        log.error(ex.getMessage());
+        val headers = new HttpHeaders();
+        val error = new GenericError();
+        error.setMessage(ex.getMessage());
+        return this.handleExceptionInternal(ex, error, headers, HttpStatus.BAD_REQUEST, request);
+    }
+}
